src/test/deca/context/invalid/renduInitial/01undefvar.res
/user/1/.base/lennea/home/Projet_GL/src/test/deca/context/invalid/renduInitial/01undefvar.deca:2:0: mismatched input '\t' expecting {'println', 'print', IDENT, '}'}
